lab2/development/07-employee-deployment.yaml
# +--------------------------------------------------
# | CREATE DEPLOYMENT FOR DEVELOPMENT ENVIRONMENT
# | AUTHOR: WORTIZ
# | DATE: 10-01-2022
# +--------------------------------------------------

apiVersion: apps/v1
kind: Deployment
metadata:
  name: dlt-api-employees
  namespace: ns-development
  labels:
    app.kubernetes.io/name: employees
    app.kubernetes.io/instance: employees
    app.kubernetes.io/version: "1.0.5"
    app.kubernetes.io/component: microservice
    app.kubernetes.io/part-of: api-employee
    app.kubernetes.io/managed-by: github.com
    owner: taa
    env: dev
    type: application
    app: api-employees
spec:
  selector:
    matchLabels:
      owner: taa
      env: dev
      type: application
      app: api-employees
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
  replicas: 1
  template:
    metadata:
      labels:
        owner: taa
        env: dev
        type: application
        app: api-employees
    spec:
      volumes:
        - name: vlm-dev-nfs-storage
          persistentVolumeClaim:
            claimName: pvc-development
      containers:
        - name: employee-services
          image: wortiz1027/employee-services:v1.0.6-20220206110619
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 8080
            - name: monitor
              containerPort: 9090
          volumeMounts:
            - name: vlm-dev-nfs-storage
              mountPath: "/employee/dev/data"
          resources:
            requests:
              memory: "250Mi"
              cpu: "350m"
            limits:
              memory: "350Mi"
              cpu: "450m"
          startupProbe:
            httpGet:
              path: /ping
              port: 8080
            failureThreshold: 30
            periodSeconds: 3
          readinessProbe:
            initialDelaySeconds: 65
            timeoutSeconds: 65
            httpGet:
              path: /monitor/actuator/health/readiness
              port: 9090
          livenessProbe:
            initialDelaySeconds: 65
            periodSeconds: 3
            httpGet:
              path: /monitor/actuator/health/liveness
              port: 9090
